fix layout jump

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body,
+:root {
+  height: 100%;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
